Working? slow session interactions

--- a/Game Upload.ipynb
+++ b/Game Upload.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "handed-isaac",
+   "id": "assured-active",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "id": "threaded-venezuela",
+   "id": "dramatic-gnome",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,61 +143,14 @@
     "        return code \n",
     "    \n",
     "    @staticmethod\n",
-    "    def _generate_game_codes(total_games, one_code_length=True):\n",
+    "    def _generate_game_codes(total_games, code_length):\n",
     "        \"\"\"\n",
     "        Generate a random set of game codes for a given number of games\n",
     "        \"\"\"\n",
     "        existing_codes = db_ops.get_game_codes()\n",
-    "        existing_ints = sorted({GameGenerator._code_to_int(code) for code in existing_codes})\n",
-    "        \n",
-    "        if len(existing_ints):\n",
-    "            max_existing = existing_ints[-1]\n",
-    "            \n",
-    "            available_ints = []\n",
-    "            for i, next_i in zip(existing_ints, existing_ints[1:]):\n",
-    "                available_ints.extend(list(range(i+1, next_i)))\n",
-    "            \n",
-    "            available_ints.append(max_existing + 1)\n",
-    "        \n",
-    "        else:\n",
-    "            available_ints = [0]\n",
-    "        \n",
-    "  \n",
-    "        additional_needed = total_games - len(available_ints)\n",
-    "        \n",
-    "        if additional_needed >= 0:\n",
-    "            min_max_needed = available_ints[-1] + additional_needed\n",
-    "\n",
-    "             # Determine the code length needed for that number of games\n",
-    "            code_length = 0\n",
-    "            n = min_max_needed\n",
-    "            while n > 0:\n",
-    "                code_length += 2\n",
-    "                n = int(n/(24 * 8))\n",
-    "\n",
-    "            max_code = (24*8)**(code_length//2)\n",
-    "            available_ints.extend(list(range(available_ints[-1]+1, max_code)))\n",
-    "            \n",
-    "        else:\n",
-    "            code_length = 0\n",
-    "                       \n",
-    "            def index_generator(l):\n",
-    "                i = 0\n",
-    "                cutoff = yield \n",
-    "                while i < len(l):\n",
-    "                    while i < len(l) and l[i] < cutoff:\n",
-    "                        i += 1\n",
-    "                    cutoff = yield i\n",
-    "\n",
-    "            g = index_generator(available_ints)\n",
-    "            next(g)\n",
-    "            i = 0\n",
-    "            while i < total_games:\n",
-    "                max_code = (3)**(code_length//2)\n",
-    "                i = g.send(max_code)\n",
-    "                code_length += 2\n",
-    "\n",
-    "            available_ints = available_ints[:i]\n",
+    "        existing_ints = sorted({GameGenerator._code_to_int(code) for code in existing_codes if len(code) == code_length})\n",
+    "        max_code = (24*8)**(code_length//2)\n",
+    "        available_ints = set(range(max_code)) - existing_ints\n",
     "\n",
     "        # Take a random sample of integers up to the maximum possible for that code length\n",
     "        nums = random.sample(available_ints, total_games)\n",
@@ -206,7 +159,7 @@
     "        return codes\n",
     "        \n",
     "    @classmethod\n",
-    "    def add_to_database(cls, input_filename, chunk_size=float('inf')):\n",
+    "    def add_to_database(cls, input_filename, code_length, chunk_size=float('inf')):\n",
     "        \"\"\"\n",
     "        Add games in game file to database. Assumes that no games exist in the database to \n",
     "        start.\n",
@@ -222,8 +175,7 @@
     "            num_games = i + 1\n",
     "            \n",
     "        # Create a unique game code for each game\n",
-    "        # Note that this assumes no game codes have been already used\n",
-    "        game_codes = GameGenerator._generate_game_codes(num_games)\n",
+    "        game_codes = GameGenerator._generate_game_codes(num_games, code_length)\n",
     "        print(\"Generated \" + str(len(game_codes)) + \" codes\")\n",
     "\n",
     "        # Read all game strings\n",
@@ -249,8 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
-   "id": "authentic-stamp",
+   "execution_count": 264,
+   "id": "russian-samba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 260,
-   "id": "worst-hughes",
+   "id": "seven-pillow",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 261,
-   "id": "loving-miracle",
+   "id": "medical-solomon",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "immediate-vessel",
+   "id": "commercial-delaware",
    "metadata": {},
    "outputs": [],
    "source": []
