Include constraints in strength calculation

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d2d69c39",
+   "id": "4617db1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c9db0d3f",
+   "id": "583eebe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,37 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "afce6c96",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.2125506072874494"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "AdjacentSelfRule(SpaceObject.Asteroid, RuleQualifier.AT_LEAST_ONE).strength(board)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "f0ede10f",
+   "id": "92f00c75",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5161943319838057"
+       "1.0"
       ]
      },
      "execution_count": 6,
@@ -61,13 +38,56 @@
     }
    ],
    "source": [
-    "OppositeSelfRule(SpaceObject.Asteroid, RuleQualifier.NONE).strength(board)"
+    "AdjacentSelfRule(SpaceObject.Comet, RuleQualifier.EVERY).strength(board, sector_types[12].constraints)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5875a22f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9056603773584906"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "OppositeSelfRule(SpaceObject.Asteroid, RuleQualifier.EVERY).strength(board, sector_types[12].constraints)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3914f45",
+   "id": "9e75bbb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OppositeSelfRule(SpaceObject.Asteroid, RuleQualifier.NONE).approx_strength(board)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1299556e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CometRule(12).approx_strength(board)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "663263a0",
    "metadata": {},
    "outputs": [],
    "source": []
