--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "05b3f55d",
+   "id": "7e1e9675",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b5651809",
+   "id": "56703b36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bca3ab9f",
+   "id": "722429ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "7ce118a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AdjacentSelfRule.generate_rule(board, [BandRule(SpaceObject.DwarfPlanet, 6, Precision.STRICT)], [], SpaceObject.DwarfPlanet)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
-   "id": "35ab7000",
+   "id": "90faab95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ff10bc60",
+   "id": "a2955e8f",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e736edc9",
+   "id": "56e4edc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0cfb42af",
+   "id": "5544c298",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7e80971e",
+   "id": "33410912",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fd9ce49c",
+   "id": "e90dfed0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2ad35b7d",
+   "id": "000ab9bd",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "616f7ea1",
+   "id": "2e0edbd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f843933b",
+   "id": "2090a136",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "494ae186",
+   "id": "08ef3082",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1ba4ee72",
+   "id": "9d686f34",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "70299221",
+   "id": "ba6696c4",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "809b13e6",
+   "id": "bd2dd13a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fd62126c",
+   "id": "0cbcabdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "af80c9b1",
+   "id": "da42d76a",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fa317fbd",
+   "id": "a4dfadd7",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0877796c",
+   "id": "ebab8be3",
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "402f940e",
+   "id": "2a86b36f",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f53ca350",
+   "id": "587fcb84",
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b88e930b",
+   "id": "ea503856",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b436b9cf",
+   "id": "75ef4e7e",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3485a4b4",
+   "id": "486288ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "87f97e28",
+   "id": "6c4c2eb6",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b0b7d966",
+   "id": "828a1ca6",
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "162aa1bc",
+   "id": "9263db29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dfc02d71",
+   "id": "9bb52779",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2254ca14",
+   "id": "717d021c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "47390065",
+   "id": "244225ce",
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70603943",
+   "id": "30f31766",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89ae03cf",
+   "id": "53af25c8",
    "metadata": {
     "scrolled": true
    },
@@ -954,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2368cbe9",
+   "id": "d96ef3c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70f5769c",
+   "id": "b706dad5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a47cb95",
+   "id": "b72b8eb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9273ad7e",
+   "id": "7b232d5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c2321d1",
+   "id": "79468a75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ac229c",
+   "id": "8e8db9fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a94b927d",
+   "id": "d2e471ab",
    "metadata": {},
    "outputs": [],
    "source": []
