No duplicate singular rules (with Empty)

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -13,6 +13,89 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "fa70c3dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "board = Board.parse(\"AECDAADDDEEEGXEGCA\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2bc8fd41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rule1 = WithinRule(SpaceObject.PlanetX, SpaceObject.Empty, RuleQualifier.EVERY, 2)\n",
+    "rule2 = WithinRule(SpaceObject.PlanetX, SpaceObject.Asteroid, RuleQualifier.EVERY, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1eb0924c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# edata1 = EliminationData(SpaceObject.Empty, 2, 2, {1, 10})\n",
+    "# def __init__(self, space_object, minimum, goal, need_eliminated, already_eliminated):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "418b8d57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 10, 11}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<planetx_game.game.Conference at 0x7ff71000b5b0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Expecting { 1, 9, 10, 11 }\n",
+    "Conference.generate_conference(board, sector_types[18].constraints, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2922c9b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "eliminate_sectors() missing 5 required positional arguments: 'board', 'constraints', 'data', 'space_object1', and 'space_object2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-179a8a06dbd4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mWithinRule\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meliminate_sectors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: eliminate_sectors() missing 5 required positional arguments: 'board', 'constraints', 'data', 'space_object1', and 'space_object2'"
+     ]
+    }
+   ],
+   "source": [
+    "WithinRule.eliminate_sectors()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "56703b36",
    "metadata": {},
    "outputs": [],
