Add comments to rules

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1113,6 +1113,92 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec5dcd95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d7e6bb89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from planetx_game.game import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d9b6de19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " def _num_within(num_sectors, space_object1, space_object2, board):\n",
+    "    prev = None, None\n",
+    "    countdown = 0\n",
+    "    within_indices = set()\n",
+    "    # Maintain a countdown of how long it's been since we've seen an object1 or object 2\n",
+    "    for i in range(-num_sectors, len(board)):\n",
+    "        if board[i] is space_object2:\n",
+    "            if countdown > 0 and prev[0] is space_object1:\n",
+    "                # We've seen an object1 within the past num_sectors, and we found an object 2\n",
+    "                within_indices.add(i % len(board))\n",
+    "            prev = board[i], i\n",
+    "            countdown = num_sectors\n",
+    "        elif board[i] is space_object1:\n",
+    "            if countdown > 0 and prev[1] is space_object2:\n",
+    "                within_indices.add(prev[1] % len(board))\n",
+    "            prev = board[i], i\n",
+    "            countdown = num_sectors\n",
+    "        else:\n",
+    "            countdown = max(0, countdown - 1)\n",
+    "    return len(within_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "94b28e52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = Board([\"\", \"\", \"A\", \"\", \"\", \"B\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "fc920adc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_num_within(3,\"A\",\"B\",b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d6149c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
