Clean up chunking code

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec5dcd95",
+   "id": "1de3b1fd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d7e6bb89",
+   "id": "a7c1dd11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d9b6de19",
+   "id": "bcc1ec46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "94b28e52",
+   "id": "9255ab13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fc920adc",
+   "id": "02093743",
    "metadata": {},
    "outputs": [
     {
@@ -1194,8 +1194,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "887951c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tempfile"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8d6149c9",
+   "id": "5bfd84ea",
    "metadata": {},
    "outputs": [],
    "source": []
